third_party/WebKit/WebKit2/UIProcess/API/mac/PageClientImpl.h
@@ -49,6 +49,9 @@ public:
 private:
     PageClientImpl(WKView*);
 
+    virtual PassOwnPtr<DrawingAreaProxy> createDrawingAreaProxy();
+    virtual void setViewNeedsDisplay(const WebCore::IntRect&);
+    
     virtual WebCore::IntSize viewSize();
     virtual bool isViewWindowActive();
     virtual bool isViewFocused();
